force-app/main/default/src/objects/PJN_Care_Plan_Lookup_Mapping__mdt/PJN_Care_Plan_Lookup_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Mapping Engine for Care Plan lookup fields
Purpose: Define fields to be populated on the careplan on record creation/insert using the mapping engine.
Metadata Relationship(s): --
Created by Mavens: Yes</description>
    <label>Care Plan Lookup Mapping</label>
    <pluralLabel>Care Plan Lookup Mappings</pluralLabel>
</CustomObject>