force-app/main/default/src/objects/PJN_Care_Plan_Lookup_Mapping__mdt/fields/PJN_Care_Plan_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Lookup_API_Name__c</fullName>
    <defaultValue>&apos;PJN_Care_Plan__c&apos;</defaultValue>
    <label>Care Plan Lookup API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>