force-app/main/default/src/objects/PJN_Care_Plan_Lookup_Mapping__mdt/fields/PJN_Id_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Id_API_Name__c</fullName>
    <defaultValue>&apos;Id&apos;</defaultValue>
    <label>Id API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>