force-app/main/default/src/objects/PJN_Care_Plan_Lookup_Mapping__mdt/listViews/PJN_All.listView-meta.xml
<ListView>
    <fullName>PJN_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Active__c</columns>
    <columns>PJN_SObject_API_Name__c</columns>
    <columns>PJN_Mapping_Job_Name__c</columns>
    <columns>PJN_Care_Plan_Lookup_API_Name__c</columns>
    <columns>PJN_Indicator_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>